@@ -52,6 +52,6 @@
          "web" : "https://github.com/oneandoneis2/App-Goto"
       }
    },
-   "version" : "0.04"
+   "version" : "0.05"
 }
 
